@@ -18,8 +18,8 @@
 #  $xappylibdir: a checkout of xappy/trunk.
 
 rev="1.1.3"
-trunk_rev="13833"
-matchspy_branchpoint="13808"
+trunk_rev="13912"
+matchspy_branchpoint="13912"
 clustering_branchpoint="13808"
 geospatial_branchpoint="13808"
 coloursim_branchpoint="13348"
